# instrument-udp-readout

./: CMakeLists.txt  README.md
bifrost/: Bifrost.cpp  BifrostReadout.cpp  BifrostReadout.h  CMakeLists.txt  wrapper.cpp
common/: GenericReadout.cpp  GenericReadout.h
dream/: CMakeLists.txt  Dream.cpp  DreamReadout.cpp  DreamReadout.h
miracles/: ESS_MIRACLES_v8_10.instr  ESS_MIRACLES_v8_2.instr  ESS_MIRACLES_v8_3.instr  ESS_MIRACLES_v8_9.instr  Event_broadcaster.comp  Makefile  README.md
miracles/src/: MiraclesReadout.cpp  MiraclesReadout.h  wrapper.cpp  wrapper.h
nmx/: Event_broadcaster.comp  Makefile  NMX_Mantid.instr
nmx/src/: NMXReadout.cpp  NMXReadout.h  wrapper.cpp  wrapper.h
